--- a/src/input.css
+++ b/src/input.css
@@ -11,7 +11,7 @@ body{
 @layer components{
      
    .font-50{
-        @apply text-2xl md:text-3xl lg:text-4xl 2xl:text-[50px]
+        @apply text-2xl md:text-3xl lg:text-4xl 2xl:text-[45px]
    }
    .font-40{
         @apply text-xl md:text-2xl lg:text-3xl 2xl:text-[40px]
@@ -26,7 +26,7 @@ body{
         @apply text-sm md:text-[16px] lg:text-[16px] 2xl:text-[24px]
    }
    .font-22{
-        @apply md:text-lg lg:text-[15px] 2xl:text-[22px]
+        @apply text-[13px] lg:text-[15px] 2xl:text-[22px]
    }
    .font-20{
         @apply text-sm md:text-base lg:text-sm 2xl:text-[20px]
@@ -41,35 +41,49 @@ body{
         @apply text-[8px] lg:text-[9px] 2xl:text-[10px]
    }
    .default-search-input{
-     @apply h-[42px] 2xl:h-[60px] font-16 ml-4 2xl:ml-6 text-gray-dark placeholder:text-xs 2xl:placeholder:text-base w-full outline-none focus:ring-0 ring-0 border-none
+     @apply h-[42px] 2xl:h-[55px] font-16 ml-4 2xl:ml-6 text-gray-dark placeholder:text-xs 2xl:placeholder:text-base w-full outline-none focus:ring-0 ring-0 border-none
    }
    .default-label{
      @apply font-18 text-gray-dark mb-2.5 2xl:mb-4 capitalize inline-block
    }
    .default-input{
-     @apply h-[42px] 2xl:h-[60px] font-16 px-3 2xl:px-5 border border-gray-medium text-gray-dark placeholder:text-xs 2xl:placeholder:text-base w-full outline-none focus:ring-0 ring-0
+     @apply h-[42px] 2xl:h-[55px] font-16 px-3 2xl:px-5 border border-gray-medium text-gray-dark placeholder:text-xs 2xl:placeholder:text-base w-full outline-none focus:ring-0 ring-0
    }
    .required-style{
      @apply after:content-['*'] after:ml-0.5 after:text-red-500
    }
    .btn{
-    @apply px-4 2xl:px-8 py-[11px] 2xl:py-5 text-white font-semibold font-20
+    @apply px-4 2xl:px-8 py-[11px] 2xl:py-5 text-white font-semibold font-20 duration-300
    }
    .btn-primary{
-     @apply bg-primary btn
+     @apply bg-primary btn hover:bg-[#183c44]
    }
    .btn-white{
-     @apply bg-white border border-gray-light text-gray-dark btn
+     @apply bg-white border border-gray-light text-gray-dark btn hover:bg-[#f7f7f7]
+   }
+   .icon-size{
+     @apply size-[18px] 2xl:size-[24px]
+   }
+   .checkbox-size{
+     @apply size-[18px] 2xl:size-[25px]
+   }
+   .check-icon-size{
+     @apply size-2.5 2xl:size-4
    }
 }
 
+@layer utilities{
+     .sidebar-box-shadow{
+          box-shadow: 0 0 15px #dfdfdf;
+     }
+}
 .custom-drop-shadow {
     --tw-drop-shadow: drop-shadow(0 3px 2px rgb(0 0 0 / 0.03)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.04));
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .table-row:has(input:checked){
-     @apply [&>*:first-child]:border-l [&>*:last-child]:border-r *:border-t *:border-b *:border-default-green
+     @apply [&>*:first-child]:border-l [&>*:last-child]:border-r *:border-t *:border-b *:border-default-green *:bg-default-green/10
 }
 .table-row:has(input:checked) .tableActionicon{
      @apply text-default-green
@@ -100,6 +114,15 @@ body{
      margin-top: 6px !important;
 }
 
-.sidebar-box-shadow{
-     box-shadow: 0 0 15px #dfdfdf;
+
+
+
+/* Style the calendar icon (if applicable) */
+input[type="date"]::-webkit-calendar-picker-indicator {
+     width: 20px;
+     height: 20px;
+   }
+
+.mobile-collapse{
+     @apply -translate-x-full
 }
