--- a/src/output.css
+++ b/src/output.css
@@ -567,7 +567,7 @@ video {
 
 @media (min-width: 1536px){
   .font-50{
-    font-size: 50px;
+    font-size: 45px;
   }
 }
 
@@ -618,11 +618,8 @@ video {
   }
 }
 
-@media (min-width: 768px){
-  .font-22{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
+.font-22{
+  font-size: 13px;
 }
 
 @media (min-width: 1024px){
@@ -756,7 +753,7 @@ video {
 @media (min-width: 1536px){
   .default-search-input{
     margin-left: 1.5rem;
-    height: 60px;
+    height: 55px;
   }
 
   .default-search-input::-moz-placeholder{
@@ -862,7 +859,7 @@ video {
 
 @media (min-width: 1536px){
   .default-input{
-    height: 60px;
+    height: 55px;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
   }
@@ -919,6 +916,7 @@ video {
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-duration: 300ms;
 }
 
 @media (min-width: 1536px){
@@ -933,6 +931,11 @@ video {
 .btn-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(30 77 87 / var(--tw-bg-opacity));
+}
+
+.btn-primary:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 60 68 / var(--tw-bg-opacity));
 }
 
 .btn-white{
@@ -968,6 +971,7 @@ video {
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-duration: 300ms;
 }
 
 @media (min-width: 1536px){
@@ -987,6 +991,47 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(8 32 32 / var(--tw-text-opacity));
+}
+
+.btn-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+.icon-size{
+  width: 18px;
+  height: 18px;
+}
+
+@media (min-width: 1536px){
+  .icon-size{
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.checkbox-size{
+  width: 18px;
+  height: 18px;
+}
+
+@media (min-width: 1536px){
+  .checkbox-size{
+    width: 25px;
+    height: 25px;
+  }
+}
+
+.check-icon-size{
+  width: 0.625rem;
+  height: 0.625rem;
+}
+
+@media (min-width: 1536px){
+  .check-icon-size{
+    width: 1rem;
+    height: 1rem;
+  }
 }
 
 .pointer-events-none{
@@ -1021,6 +1066,10 @@ video {
   right: 0px;
 }
 
+.right-4{
+  right: 1rem;
+}
+
 .right-\[-10px\]{
   right: -10px;
 }
@@ -1049,6 +1098,10 @@ video {
   z-index: 10;
 }
 
+.z-20{
+  z-index: 20;
+}
+
 .z-40{
   z-index: 40;
 }
@@ -1059,6 +1112,10 @@ video {
 
 .z-\[99\]{
   z-index: 99;
+}
+
+.col-span-12{
+  grid-column: span 12 / span 12;
 }
 
 .-mx-2{
@@ -1203,11 +1260,6 @@ video {
   display: none;
 }
 
-.\!size-\[16px\]{
-  width: 16px !important;
-  height: 16px !important;
-}
-
 .\!size-\[25px\]{
   width: 25px !important;
   height: 25px !important;
@@ -1248,11 +1300,6 @@ video {
   height: 1.5rem;
 }
 
-.size-7{
-  width: 1.75rem;
-  height: 1.75rem;
-}
-
 .size-8{
   width: 2rem;
   height: 2rem;
@@ -1271,11 +1318,6 @@ video {
 .size-\[18px\]{
   width: 18px;
   height: 18px;
-}
-
-.size-\[20px\]{
-  width: 20px;
-  height: 20px;
 }
 
 .size-\[21px\]{
@@ -1428,8 +1470,16 @@ video {
   width: 160px;
 }
 
+.w-\[200px\]{
+  width: 200px;
+}
+
 .w-\[215px\]{
   width: 215px;
+}
+
+.w-\[240px\]{
+  width: 240px;
 }
 
 .w-\[28px\]{
@@ -1501,11 +1551,6 @@ video {
   border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 
-.border-spacing-y-2{
-  --tw-border-spacing-y: 0.5rem;
-  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
-}
-
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1535,6 +1580,10 @@ video {
 
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-12{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1600,6 +1649,10 @@ video {
   row-gap: 1rem;
 }
 
+.gap-y-6{
+  row-gap: 1.5rem;
+}
+
 .gap-y-7{
   row-gap: 1.75rem;
 }
@@ -1650,6 +1703,18 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
 .space-y-\[7px\] > :not([hidden]) ~ :not([hidden]){
@@ -1759,9 +1824,18 @@ video {
   border-color: rgb(100 103 109 / var(--tw-border-opacity));
 }
 
+.border-red1{
+  --tw-border-opacity: 1;
+  border-color: rgb(235 87 87 / var(--tw-border-opacity));
+}
+
 .border-r-gray-100{
   --tw-border-opacity: 1;
   border-right-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
+.border-t-transparent{
+  border-top-color: transparent;
 }
 
 .bg-\[\#082020\]\/70{
@@ -1790,6 +1864,11 @@ video {
 
 .bg-secondary\/10{
   background-color: rgb(255 108 62 / 0.1);
+}
+
+.bg-sky-light{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 244 244 / var(--tw-bg-opacity));
 }
 
 .bg-white{
@@ -1865,11 +1944,6 @@ video {
   padding-right: 1.5rem;
 }
 
-.px-\[20px\]{
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -1911,6 +1985,10 @@ video {
 
 .pb-2\.5{
   padding-bottom: 0.625rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
 }
 
 .pl-2{
@@ -1957,12 +2035,20 @@ video {
   padding-top: 100px;
 }
 
+.font-\[300\]{
+  font-weight: 300;
+}
+
 .font-light{
   font-weight: 300;
 }
 
 .font-medium{
   font-weight: 500;
+}
+
+.font-normal{
+  font-weight: 400;
 }
 
 .font-semibold{
@@ -1984,6 +2070,11 @@ video {
 .\!text-red1{
   --tw-text-opacity: 1 !important;
   color: rgb(235 87 87 / var(--tw-text-opacity)) !important;
+}
+
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .text-blue2{
@@ -2081,6 +2172,7 @@ body{
   border-bottom-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(39 174 96 / var(--tw-border-opacity));
+  background-color: rgb(39 174 96 / 0.1);
 }
 
 .table-row:has(input:checked)>*:first-child{
@@ -2128,8 +2220,16 @@ body{
   margin-top: 6px !important;
 }
 
-.sidebar-box-shadow{
-  box-shadow: 0 0 15px #dfdfdf;
+/* Style the calendar icon (if applicable) */
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  width: 20px;
+  height: 20px;
+}
+
+.mobile-collapse{
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .\*\:border-b > *{
@@ -2149,6 +2249,10 @@ body{
   border-bottom-width: 0px;
 }
 
+.hover\:border-b-secondary\/60:hover{
+  border-bottom-color: rgb(255 108 62 / 0.6);
+}
+
 .hover\:bg-\[\#D5E0E0\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(213 224 224 / var(--tw-bg-opacity));
@@ -2157,6 +2261,10 @@ body{
 .hover\:bg-\[\#fcfcfc\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(252 252 252 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-default-green\/10:hover{
+  background-color: rgb(39 174 96 / 0.1);
 }
 
 .hover\:bg-gray-100:hover{
@@ -2189,6 +2297,11 @@ body{
 }
 
 .focus\:text-secondary:focus{
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-secondary{
   --tw-text-opacity: 1;
   color: rgb(255 108 62 / var(--tw-text-opacity));
 }
@@ -2249,8 +2362,37 @@ body{
   opacity: 1;
 }
 
+.has-\[input\:checked\]\:border-b-default-green:has(input:checked){
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(39 174 96 / var(--tw-border-opacity));
+}
+
+.has-\[input\:checked\]\:border-t-default-green:has(input:checked){
+  --tw-border-opacity: 1;
+  border-top-color: rgb(39 174 96 / var(--tw-border-opacity));
+}
+
+.has-\[input\:checked\]\:bg-default-green\/10:has(input:checked){
+  background-color: rgb(39 174 96 / 0.1);
+}
+
+.has-\[\.text-blue-600\]\:text-secondary:has(.text-blue-600){
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
+}
+
+.has-\[button\.text-blue-600\]\:text-secondary:has(button.text-blue-600){
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
+}
+
 .group\/check:has(input:checked) .group-has-\[input\:checked\]\/check\:block{
   display: block;
+}
+
+.group\/main:has(.dropdown.block) .group-has-\[\.dropdown\.block\]\/main\:rotate-180{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .group\/check:has(input:checked) .group-has-\[input\:checked\]\/check\:border-default-green{
@@ -2266,6 +2408,11 @@ body{
 .group\/main:has(.dropdown.block) .group-has-\[\.dropdown\.block\]\/main\:text-red1{
   --tw-text-opacity: 1;
   color: rgb(235 87 87 / var(--tw-text-opacity));
+}
+
+.group\/main:has(.dropdown.block) .group-has-\[\.dropdown\.block\]\/main\:text-secondary{
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
 }
 
 .group\/check:has(input:checked) .group-has-\[input\:checked\]\/check\:text-default-green{
@@ -2298,10 +2445,6 @@ body{
 
   .sm\:flex-none{
     flex: none;
-  }
-
-  .sm\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -2355,6 +2498,14 @@ body{
     top: auto;
   }
 
+  .lg\:col-span-5{
+    grid-column: span 5 / span 5;
+  }
+
+  .lg\:col-span-7{
+    grid-column: span 7 / span 7;
+  }
+
   .lg\:my-0{
     margin-top: 0px;
     margin-bottom: 0px;
@@ -2370,6 +2521,10 @@ body{
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
   }
 
   .lg\:w-1\/4{
@@ -2396,19 +2551,23 @@ body{
     padding-left: 1rem;
     padding-right: 1rem;
   }
+
+  .lg\:sidebar-box-shadow{
+    box-shadow: 0 0 15px #dfdfdf;
+  }
 }
 
 @media (min-width: 1280px){
   .xl\:w-1\/3{
     width: 33.333333%;
   }
-
-  .xl\:pl-10{
-    padding-left: 2.5rem;
-  }
 }
 
 @media (min-width: 1536px){
+  .\32xl\:right-6{
+    right: 1.5rem;
+  }
+
   .\32xl\:right-\[-18px\]{
     right: -18px;
   }
@@ -2455,11 +2614,6 @@ body{
 
   .\32xl\:mt-8{
     margin-top: 2rem;
-  }
-
-  .\32xl\:\!size-\[26px\]{
-    width: 26px !important;
-    height: 26px !important;
   }
 
   .\32xl\:\!size-\[34px\]{
@@ -2515,11 +2669,6 @@ body{
   .\32xl\:size-\[20px\]{
     width: 20px;
     height: 20px;
-  }
-
-  .\32xl\:size-\[26px\]{
-    width: 26px;
-    height: 26px;
   }
 
   .\32xl\:size-\[30px\]{
@@ -2586,8 +2735,16 @@ body{
     width: 185px;
   }
 
+  .\32xl\:w-\[200px\]{
+    width: 200px;
+  }
+
   .\32xl\:w-\[225px\]{
     width: 225px;
+  }
+
+  .\32xl\:w-\[300px\]{
+    width: 300px;
   }
 
   .\32xl\:w-\[315px\]{
@@ -2622,8 +2779,17 @@ body{
     gap: 1.5rem;
   }
 
+  .\32xl\:gap-x-12{
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+
   .\32xl\:gap-y-10{
     row-gap: 2.5rem;
+  }
+
+  .\32xl\:gap-y-8{
+    row-gap: 2rem;
   }
 
   .\32xl\:space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -2654,6 +2820,12 @@ body{
     --tw-space-y-reverse: 0;
     margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
+  }
+
+  .\32xl\:space-y-10 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
   }
 
   .\32xl\:p-10{
@@ -2713,11 +2885,6 @@ body{
     padding-bottom: 3.5rem;
   }
 
-  .\32xl\:py-2{
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-  }
-
   .\32xl\:py-3{
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -2754,6 +2921,10 @@ body{
 
   .\32xl\:pb-5{
     padding-bottom: 1.25rem;
+  }
+
+  .\32xl\:pb-8{
+    padding-bottom: 2rem;
   }
 
   .\32xl\:pl-6{
@@ -2806,6 +2977,10 @@ body{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
+}
+
+.\[\&\.active\]\:border-b-secondary\/60.active{
+  border-bottom-color: rgb(255 108 62 / 0.6);
 }
 
 .\[\&\.active\]\:bg-primary.active{
