--- a/src/css/output.css
+++ b/src/css/output.css
@@ -571,6 +571,31 @@ video {
   }
 }
 
+.font-40{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+@media (min-width: 768px){
+  .font-40{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .font-40{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .font-40{
+    font-size: 40px;
+  }
+}
+
 .font-28{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1066,6 +1091,10 @@ video {
   right: 0px;
 }
 
+.right-2{
+  right: 0.5rem;
+}
+
 .right-4{
   right: 1rem;
 }
@@ -1138,11 +1167,6 @@ video {
   margin-right: auto;
 }
 
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -1176,8 +1200,20 @@ video {
   margin-left: 0.25rem;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
 .ml-4{
   margin-left: 1rem;
+}
+
+.ml-7{
+  margin-left: 1.75rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .mr-2{
@@ -1236,6 +1272,10 @@ video {
   display: block;
 }
 
+.inline-block{
+  display: inline-block;
+}
+
 .flex{
   display: flex;
 }
@@ -1268,6 +1308,11 @@ video {
 .size-10{
   width: 2.5rem;
   height: 2.5rem;
+}
+
+.size-12{
+  width: 3rem;
+  height: 3rem;
 }
 
 .size-2{
@@ -1320,6 +1365,11 @@ video {
   height: 18px;
 }
 
+.size-\[20px\]{
+  width: 20px;
+  height: 20px;
+}
+
 .size-\[21px\]{
   width: 21px;
   height: 21px;
@@ -1350,6 +1400,10 @@ video {
   height: 70px;
 }
 
+.h-12{
+  height: 3rem;
+}
+
 .h-2{
   height: 0.5rem;
 }
@@ -1360,6 +1414,10 @@ video {
 
 .h-4{
   height: 1rem;
+}
+
+.h-5{
+  height: 1.25rem;
 }
 
 .h-6{
@@ -1390,8 +1448,16 @@ video {
   height: 100vh;
 }
 
+.max-h-\[244px\]{
+  max-height: 244px;
+}
+
 .max-h-full{
   max-height: 100%;
+}
+
+.min-h-\[480px\]{
+  min-height: 480px;
 }
 
 .min-h-screen{
@@ -1430,8 +1496,8 @@ video {
   width: 33.333333%;
 }
 
-.w-5\/12{
-  width: 41.666667%;
+.w-5{
+  width: 1.25rem;
 }
 
 .w-52{
@@ -1444,10 +1510,6 @@ video {
 
 .w-7{
   width: 1.75rem;
-}
-
-.w-7\/12{
-  width: 58.333333%;
 }
 
 .w-8{
@@ -1530,6 +1592,14 @@ video {
   max-width: 400px;
 }
 
+.max-w-\[60\%\]{
+  max-width: 60%;
+}
+
+.max-w-\[90\%\]{
+  max-width: 90%;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -1594,8 +1664,16 @@ video {
   flex-wrap: wrap;
 }
 
+.items-end{
+  align-items: flex-end;
+}
+
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-end{
@@ -1616,6 +1694,10 @@ video {
 
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-5{
@@ -1705,6 +1787,12 @@ video {
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-5 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1750,6 +1838,10 @@ video {
   overflow-x: scroll;
 }
 
+.overflow-y-scroll{
+  overflow-y: scroll;
+}
+
 .text-ellipsis{
   text-overflow: ellipsis;
 }
@@ -1778,6 +1870,26 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-b-lg{
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
+.rounded-l-2xl{
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-r-2xl{
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.rounded-t-2xl{
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1800,10 +1912,6 @@ video {
 
 .border-r-0{
   border-right-width: 0px;
-}
-
-.border-r-\[2px\]{
-  border-right-width: 2px;
 }
 
 .border-t{
@@ -1850,6 +1958,16 @@ video {
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-default-green{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 174 96 / var(--tw-bg-opacity));
+}
+
+.bg-gray-4{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 244 245 / var(--tw-bg-opacity));
 }
 
 .bg-primary{
@@ -1944,6 +2062,16 @@ video {
   padding-right: 1.5rem;
 }
 
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-1\.5{
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+
 .py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -1991,6 +2119,10 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.pl-1{
+  padding-left: 0.25rem;
+}
+
 .pl-2{
   padding-left: 0.5rem;
 }
@@ -2003,10 +2135,6 @@ video {
   padding-left: 1rem;
 }
 
-.pl-5{
-  padding-left: 1.25rem;
-}
-
 .pr-4{
   padding-right: 1rem;
 }
@@ -2015,12 +2143,16 @@ video {
   padding-right: 1.5rem;
 }
 
-.pr-\[22px\]{
-  padding-right: 22px;
+.pr-8{
+  padding-right: 2rem;
 }
 
 .pt-0{
   padding-top: 0px;
+}
+
+.pt-1{
+  padding-top: 0.25rem;
 }
 
 .pt-5{
@@ -2087,6 +2219,11 @@ video {
   color: rgb(39 174 96 / var(--tw-text-opacity));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -2144,6 +2281,11 @@ video {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .filter{
@@ -2249,8 +2391,22 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-bottom-width: 0px;
 }
 
+.last\:border-b-transparent:last-child{
+  border-bottom-color: transparent;
+}
+
+.hover\:border-secondary:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 108 62 / var(--tw-border-opacity));
+}
+
 .hover\:border-b-secondary\/60:hover{
   border-bottom-color: rgb(255 108 62 / 0.6);
+}
+
+.hover\:bg-\[\#183c44\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 60 68 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#D5E0E0\]:hover{
@@ -2426,6 +2582,14 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-bottom: 1.5rem;
   }
 
+  .sm\:mb-0{
+    margin-bottom: 0px;
+  }
+
+  .sm\:mt-6{
+    margin-top: 1.5rem;
+  }
+
   .sm\:block{
     display: block;
   }
@@ -2443,8 +2607,45 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 40px;
   }
 
+  .sm\:w-1\/2{
+    width: 50%;
+  }
+
+  .sm\:w-5\/12{
+    width: 41.666667%;
+  }
+
+  .sm\:w-7\/12{
+    width: 58.333333%;
+  }
+
+  .sm\:w-fit{
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .sm\:flex-none{
     flex: none;
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:items-center{
+    align-items: center;
+  }
+
+  .sm\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .sm\:justify-end{
+    justify-content: flex-end;
+  }
+
+  .sm\:justify-between{
+    justify-content: space-between;
   }
 
   .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -2453,9 +2654,57 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .sm\:rounded-md{
+    border-radius: 0.375rem;
+  }
+
+  .sm\:border-0{
+    border-width: 0px;
+  }
+
+  .sm\:border-b-0{
+    border-bottom-width: 0px;
+  }
+
+  .sm\:border-r-\[2px\]{
+    border-right-width: 2px;
+  }
+
+  .sm\:border-none{
+    border-style: none;
+  }
+
+  .sm\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:py-5{
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .sm\:pb-0{
+    padding-bottom: 0px;
+  }
+
+  .sm\:pr-\[22px\]{
+    padding-right: 22px;
+  }
+
+  .sm\:pt-0{
+    padding-top: 0px;
+  }
+
+  .sm\:shadow-md{
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
 
@@ -2468,12 +2717,28 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     grid-column: span 2 / span 2;
   }
 
+  .md\:mt-0{
+    margin-top: 0px;
+  }
+
+  .md\:h-full{
+    height: 100%;
+  }
+
   .md\:w-10\/12{
     width: 83.333333%;
   }
 
+  .md\:w-3\/12{
+    width: 25%;
+  }
+
   .md\:w-5\/12{
     width: 41.666667%;
+  }
+
+  .md\:w-6\/12{
+    width: 50%;
   }
 
   .md\:w-7\/12{
@@ -2482,6 +2747,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .md\:w-\[160px\]{
     width: 160px;
+  }
+
+  .md\:flex-1{
+    flex: 1 1 0%;
   }
 
   .md\:grid-cols-2{
@@ -2506,11 +2775,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     grid-column: span 7 / span 7;
   }
 
-  .lg\:my-0{
-    margin-top: 0px;
-    margin-bottom: 0px;
-  }
-
   .lg\:block{
     display: block;
   }
@@ -2524,14 +2788,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
 
   .lg\:w-1\/2{
-    width: 50%;
-  }
-
-  .lg\:w-1\/4{
-    width: 25%;
-  }
-
-  .lg\:w-2\/4{
     width: 50%;
   }
 
@@ -2554,12 +2810,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .lg\:sidebar-box-shadow{
     box-shadow: 0 0 15px #dfdfdf;
-  }
-}
-
-@media (min-width: 1280px){
-  .xl\:w-1\/3{
-    width: 33.333333%;
   }
 }
 
@@ -2590,6 +2840,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .\32xl\:mb-8{
     margin-bottom: 2rem;
+  }
+
+  .\32xl\:ml-10{
+    margin-left: 2.5rem;
   }
 
   .\32xl\:mt-0{
@@ -2634,6 +2888,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .\32xl\:size-14{
     width: 3.5rem;
     height: 3.5rem;
+  }
+
+  .\32xl\:size-2{
+    width: 0.5rem;
+    height: 0.5rem;
+  }
+
+  .\32xl\:size-2\.5{
+    width: 0.625rem;
+    height: 0.625rem;
   }
 
   .\32xl\:size-3{
@@ -2931,10 +3195,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-left: 1.5rem;
   }
 
-  .\32xl\:pl-7{
-    padding-left: 1.75rem;
-  }
-
   .\32xl\:pr-8{
     padding-right: 2rem;
   }
@@ -2977,6 +3237,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
+}
+
+.\[\&\.active\]\:pointer-events-auto.active{
+  pointer-events: auto;
 }
 
 .\[\&\.active\]\:border-b-secondary\/60.active{
